# platform.core.system.tizen-platform-wrapper

./: AUTHORS  LGPL_2.0  Makefile.am  README  autogen.sh  configure.ac  project.config  tizen-platform-wrapper.pc.in
packaging/: tizen-platform-wrapper.spec
src/: Makefile.am  buffer.c  buffer.h  build.sh  context.c  context.h  foreign.c  foreign.h  groups.c  groups.h  hashing.c  hashing.h  heap.c  heap.h  init.c  init.h  isadmin.c  isadmin.h  parser.c  parser.h  passwd.c  passwd.h  scratch.c  scratch.h  sha256sum.c  sha256sum.h  shared-api.c  shared-api.h  static-api.c  toolbox.c  tzplatform_config.c  tzplatform_config.h  tzplatform_config.sym  tzplatform_get.c  tzplatform_variables.h
