bin_PROGRAMS = tzplatform-tool

tzplatform_tool_SOURCES = buffer.c \
                          foreign.c \
                          heap.c \
                          parser.c \
                          toolbox.c

dist_pkgdata_DATA = buffer.c \
                    buffer.h \
                    foreign.c \
                    foreign.h \
                    heap.c \
                    heap.h \
                    parser.c \
                    parser.h \
                    scratch.c \
                    scratch.h \
                    tzplatform_config.c \
                    tzplatform_config.h \
                    tzplatform_get.c \
                    passwd.h \
                    passwd.c \
                    isadmin.h \
                    isadmin.c
