bin_PROGRAMS = tzplatform-tool

tzplatform_tool_SOURCES = buffer.c \
                          foreign.c \
                          heap.c \
                          parser.c \
                          sha256sum.c \
                          toolbox.c

dist_pkgdata_DATA = buffer.c \
                    buffer.h \
                    foreign.c \
                    foreign.h \
                    heap.c \
                    heap.h \
                    parser.c \
                    parser.h \
                    scratch.c \
                    scratch.h \
                    context.c \
                    context.h \
                    hashing.c \
                    hashing.h \
                    init.c \
                    init.h \
                    shared-api.c \
                    shared-api.h \
                    static-api.c \
                    tzplatform_config.sym \
                    tzplatform_config.h \
                    tzplatform_get.c \
                    passwd.h \
                    passwd.c \
                    groups.h \
                    groups.c
